--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",    
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-myconnection": "^1.0.4",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
